# math-sorcerer-scraper

./: README.md  generate-markdown-files.py  pyproject.toml
scraped/: abstract-algebra-books-.html  calculus-books.html  college-algebra-precalculus-and-trigonometry-books.html  complex-analysis-books.html  computer-science-books.html  differential-equations-books.html  discrete-mathematics-books.html  epic-math-book-list.html  graduate-level-math-books.html  graph-theory-books.html  linear-algebra-books.html  number-theory-books.html  partial-diffential-equations.html  physics-books.html  pre-algebra-algebra-and-geometry-books.html  probability-and-statistics-books.html  proof-writing-books.html  real-analysis-advanced-calculus-books.html  topology-books.html
scripts/: console-menu.py
