[tool.poetry]
name = "math-sorcerer-scraper"
version = "0.1.0"
description = ""
authors = ["Edmund Leibert III <edmund.leibert@gmail.com>"]
readme = "README.md"
packages = [{include = "math_sorcerer_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.2"
pick = "^2.2.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
